Added comment_page, comment_per parameter in post serialize for comments
