# app/serializers/post_serializer.rb
@@ -3,6 +3,8 @@ class PostSerializer < ActiveModel::Serializer
   has_one :user
   has_many :comments
   def comments
-    object.comments.where(published: true).order('created_at DESC, id DESC')
+    comment_page = instance_options[:comment_page]
+    comment_per = instance_options[:comment_per]
+    object.comments.published.by_date.page(comment_page).per(comment_per)
   end
 end
